<resources>
    <string name="app_name">FootballPlayerDB</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="home_title">FootballPlayerDB</string>

    <string name="play_game_button_title">Play Game</string>
    <string name="player_list_button_title">Player List</string>

    <string name="player_card_position">Position</string>
    <string name="player_card_nationality">Nationality</string>
    <string name="player_card_name">Firstname Lastname</string>
    <string name="player_card_age">Age</string>
    <string name="player_card_rating">80</string>
    <string name="player_card_attack">Attack</string>
    <string name="player_card_midfield">Midfield</string>
    <string name="player_card_defence">Defence</string>
    <string name="delete_player_button_title">Delete Player</string>
    <string name="edit_player_button_title">Edit Player</string>
    <string name="add_player_fab">Add Player</string>

    <string name="search_bar_hint">Search for Player</string>

    <string name="player_add_screen_title">Customize Player Details</string>
    <string name="player_add_name_hint">Enter Player\'s Full Name</string>
    <string name="player_add_nationality_hint">Enter Player\'s Nationality</string>
    <string name="player_add_age_hint">Enter Player\'s Age</string>
    <string name="player_add_position_hint">Choose Player\'s Position</string>
    <string name="player_add_attack_hint">Attack Rating</string>
    <string name="player_add_midfield_hint">Midfield Rating</string>
    <string name="player_add_defence_hint">Defence Rating</string>
    <string name="player_add_imageUrl_hint">Enter Player\s ImageUrl</string>
    <string name="player_add_attack_radiobutton">Forward</string>
    <string name="player_add_midfield_radiobutton">Midfielder</string>
    <string name="player_add_defence_radiobutton">Defender</string>
    <string name="player_add_submit_button">Submit Player</string>

    <string name="menu_player_database">Player Database</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_add_player">Add Player</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_title">Profile</string>
    <string name="about_title">About</string>
    <string name="about_text_game">FootballCardGame is a basic game that involves playing against an AI in rounds of battles where you pit your player card against the AI\'s player card in certain categories like Attack, Midfield and Defence. The winner of each round gets to keep the loser\'s card and the game ends when the loser has no more cards at their disposal</string>
    <string name="about_text_database">FootballPlayerDB is a database of football players along with their ratings. Users can view players as well as add, edit or delete players</string>
</resources>