<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <TextView
        android:id="@+id/player_add_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_player_title_margin"
        android:text="@string/player_add_screen_title"
        android:textColor="@color/black"
        android:textSize="@dimen/add_player_title_font_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/player_add_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_player_text_margin_start"
        android:layout_marginTop="@dimen/add_player_text_margin_top"
        android:hint="@string/player_add_name_hint"
        android:inputType="textPersonName"
        android:minHeight="@dimen/add_player_minHeight"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/add_player_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_screen_title" />

    <EditText
        android:id="@+id/player_add_nationality_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_player_text_margin_start"
        android:layout_marginTop="@dimen/add_player_text_margin_top"
        android:hint="@string/player_add_nationality_hint"
        android:inputType="text"
        android:minHeight="@dimen/add_player_minHeight"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/add_player_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_name_input" />

    <EditText
        android:id="@+id/player_add_age_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_player_text_margin_start"
        android:layout_marginTop="@dimen/add_player_text_margin_top"
        android:hint="@string/player_add_age_hint"
        android:inputType="number"
        android:minHeight="@dimen/add_player_minHeight"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/add_player_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_nationality_input" />

    <TextView
        android:id="@+id/player_add_position_input_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_player_text_margin_start"
        android:layout_marginTop="@dimen/add_player_text_margin_top"
        android:text="@string/player_add_position_hint"
        android:textColor="@color/black"
        android:textSize="@dimen/add_player_font_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/player_add_position_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_age_input" />

    <RadioGroup
        android:id="@+id/player_add_position_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_player_text_margin_start"
        app:layout_constraintBottom_toTopOf="@+id/player_add_attack_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_position_input_title">

        <RadioButton
            android:id="@+id/player_add_forward_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/player_add_attack_radiobutton" />

        <RadioButton
            android:id="@+id/player_add_midfielder_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/player_add_midfield_radiobutton" />

        <RadioButton
            android:id="@+id/player_add_defender_radio_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/player_add_defence_radiobutton" />
    </RadioGroup>

    <EditText
        android:id="@+id/player_add_attack_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_player_text_margin_top"
        android:layout_marginHorizontal="@dimen/add_player_text_margin_start"
        android:hint="@string/player_add_attack_hint"
        android:inputType="number"
        android:minHeight="@dimen/add_player_minHeight"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/add_player_font_size"
        app:layout_constraintEnd_toStartOf="@+id/player_add_midfield_input"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_position_input" />

    <EditText
        android:id="@+id/player_add_midfield_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/player_add_midfield_hint"
        android:inputType="number"
        android:minHeight="@dimen/add_player_minHeight"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/add_player_font_size"
        app:layout_constraintEnd_toStartOf="@+id/player_add_defence_input"
        app:layout_constraintStart_toEndOf="@+id/player_add_attack_input"
        app:layout_constraintTop_toTopOf="@+id/player_add_attack_input" />

    <EditText
        android:id="@+id/player_add_defence_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/add_player_text_margin_start"
        android:hint="@string/player_add_defence_hint"
        android:inputType="number"
        android:minHeight="@dimen/add_player_minHeight"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/add_player_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/player_add_midfield_input"
        app:layout_constraintTop_toTopOf="@+id/player_add_attack_input" />

    <EditText
        android:id="@+id/player_add_imageUrl_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/add_player_text_margin_start"
        android:hint="@string/player_add_imageUrl_hint"
        android:inputType="textUri"
        android:minHeight="@dimen/add_player_minHeight"
        android:textColorHint="@color/dark_grey"
        android:textSize="@dimen/add_player_font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_attack_input" />

    <Button
        android:id="@+id/player_add_submit_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/add_player_button_margin_top"
        android:background="@color/teal"
        android:text="@string/player_add_submit_button"
        android:textColor="@color/black"
        android:textSize="@dimen/add_player_button_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_add_imageUrl_input" />

</androidx.constraintlayout.widget.ConstraintLayout>